--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Nasi Goreng Suliwa</title>
 
     <body>
         <header>
             <div class="logo">
-                <a href="#"> D'Edge <span>Coffee</span></a>
+                <a href="#"> Nasi Goreng Suliwa<span>Coffee</span></a>
             </div>
             <button class="hamburger" onclick="toggleMenu()">☰</button>
             <nav>
