--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <a href="#"> Nasi Goreng<span>Suliwa</span></a>
+            <a href="#"> Nasi Goreng Suliwa<span></a>
         </div>
 
         <!-- Navigasi Menu -->
         <nav>
             <ul>
-                <li><a href="https://nasigorengsuliwa.github.io/">Home</a></li>
+                <li><a href="">Home</a></li>
                 <!-- Tautkan ke halaman Menu di repo yang berbeda -->
                 <li><a href="https://nasigorengsuliwa.github.io/menu.github.io/">Menu</a></li>
                 <li><a href="https://nasigorengsuliwa.github.io/checkout.github.io/">Keranjang</a></li>
@@ -29,8 +29,7 @@
     <!-- Home Section -->
     <section class="home">
         <h1>Selamat datang di Nasi Goreng Suliwa!</h1>
-        <p>Aroma wangi, rasa berani! Temukan berbagai pilihan nasi goreng dan kopi kami di sini.</p>
-        
+        <p>Ayo coba berbagai pilihan nasi goreng dengan beragam rasa yang unik hanya di Nasi Goreng Mas Suliwa, temukan hidangan favorit Anda di setiap menu kami.
         <!-- Gambar Home -->
         <div class="home-img">
             <img src="home.png" alt="Nasi Goreng Suliwa">
