--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="">Home</a></li>
                 <!-- Tautkan ke halaman Menu di repo yang berbeda -->
                 <li><a href="https://nasigorengsuliwa.github.io/menu.github.io/">Menu</a></li>
-                <li><a href="https://nasigorengsuliwa.github.io/checkout.github.io/">Keranjang</a></li>
+                <li><a href="http://nasigorengsuliwa.id.biz.id/maps.github.io/">Maps</a></li>
             </ul>
         </nav>
     </header>
